Atualizando as foto

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
             <img src="/img/beatriz.jpg" class="btn-icon"> Beatriz Farias - Cultura e Endomarketing
         </a>
         <a href="https://wa.me/55SEUNUMERO2" class="btn">
-            <img src="/img/beatriz.jpg" class="btn-icon"> Maisa Brandão - Atração e Seleção
+            <img src="/img/maisa.jpg" class="btn-icon"> Maisa Brandão - Atração e Seleção
         </a>
         <a href="https://wa.me/55SEUNUMERO3" class="btn">
             <img src="/img/nattasha.png" class="btn-icon"> Nattasha Dias - Recrutamento e Seleção
         </a>
         <a href="https://wa.me/55SEUNUMERO4" class="btn">
-            <img src="/img/Screenshot_1.png" class="btn-icon"> Paula Carvalho - Recrutamento e Seleção
+            <img src="/img/paula.jpg" class="btn-icon"> Paula Carvalho - Recrutamento e Seleção
         </a>
         <a href="https://wa.me/55SEUNUMERO5" class="btn">
-            <img src="/img/rossiflavia.png" class="btn-icon"> Rossiflavia Souza - Atração e Seleção
+            <img src="/img/Rossiflavia.jpg" class="btn-icon"> Rossiflavia Souza - Atração e Seleção
         </a>
         <a href="https://wa.me/55SEUNUMERO6" class="btn">
-            <img src="/img/juliane.png" class="btn-icon"> Juliane Albuquerque - Recrutamento e Seleção
+            <img src="/img/Juliane.jpg" class="btn-icon"> Juliane Albuquerque - Recrutamento e Seleção
         </a>
     </div>
 
