--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <div class="column">
         <a href="https://wa.me/55SEUNUMERO7" class="btn">
-            <img src="/img/elizabeth.png" class="btn-icon"> Elizabeth Parente - Benefício
+            <img src="/img/elizabeth.jpg" class="btn-icon"> Elizabeth Parente - Benefício
         </a>
         <a href="https://wa.me/55SEUNUMERO8" class="btn">
             <img src="/img/dp.png" class="btn-icon"> Isadora Oliveira - Ponto
