Atualizando contatos Ana e Rafaela

--- a/index.html
+++ b/index.html
@@ -14,43 +14,49 @@
 
     <div class="button-container">
     <div class="column">
-        <a href="https://wa.me/55SEUNUMERO1" class="btn">
+        <a href="https://wa.me/559292070394" class="btn">
+            <img src="/img/rafaela.png" class="btn-icon"> Rafaela Pinheir - Coordenadora
+        </a>
+        <a href="https://wa.me/559293274470" class="btn">
             <img src="/img/beatriz.jpg" class="btn-icon"> Beatriz Farias - Cultura e Endomarketing
         </a>
-        <a href="https://wa.me/55SEUNUMERO2" class="btn">
+        <a href="https://wa.me/559293126789" class="btn">
             <img src="/img/maisa.jpg" class="btn-icon"> Maisa Brandão - Atração e Seleção
         </a>
-        <a href="https://wa.me/55SEUNUMERO3" class="btn">
+        <a href="https://wa.me/559291366332" class="btn">
             <img src="/img/nattasha.png" class="btn-icon"> Nattasha Dias - Recrutamento e Seleção
         </a>
-        <a href="https://wa.me/55SEUNUMERO4" class="btn">
+        <a href="https://wa.me/559282370180" class="btn">
             <img src="/img/paula.jpg" class="btn-icon"> Paula Carvalho - Recrutamento e Seleção
         </a>
-        <a href="https://wa.me/55SEUNUMERO5" class="btn">
+        <a href="https://wa.me/559291826959" class="btn">
             <img src="/img/Rossiflavia.jpg" class="btn-icon"> Rossiflavia Souza - Atração e Seleção
         </a>
-        <a href="https://wa.me/55SEUNUMERO6" class="btn">
+        <a href="https://wa.me/559294862252" class="btn">
             <img src="/img/Juliane.jpg" class="btn-icon"> Juliane Albuquerque - Recrutamento e Seleção
         </a>
     </div>
 
     <div class="column">
-        <a href="https://wa.me/55SEUNUMERO7" class="btn">
+        <a href="https://wa.me/559299972048" class="btn">
+            <img src="/img/ana.png" class="btn-icon"> Ana Cavalcante - Coordenadora
+        </a>
+        <a href="https://wa.me/559291521258" class="btn">
             <img src="/img/elizabeth.jpg" class="btn-icon"> Elizabeth Parente - Benefício
         </a>
-        <a href="https://wa.me/55SEUNUMERO8" class="btn">
+        <a href="https://wa.me/559291466800" class="btn">
             <img src="/img/dp.png" class="btn-icon"> Isadora Oliveira - Ponto
         </a>
-        <a href="https://wa.me/55SEUNUMERO9" class="btn">
+        <a href="https://wa.me/559291117312" class="btn">
             <img src="/img/dp.png" class="btn-icon"> Daniel Nascimento - Folha/RCA
         </a>
-        <a href="https://wa.me/55SEUNUMERO10" class="btn">
+        <a href="https://wa.me/559293300304" class="btn">
             <img src="/img/dp.png" class="btn-icon"> Italo Sousa - Jurídico
         </a>
-        <a href="https://wa.me/55SEUNUMERO11" class="btn">
+        <a href="https://wa.me/559288019561" class="btn">
             <img src="/img/sesmt_2.png" class="btn-icon"> Brenda Salanova - Sesmt
         </a>
-        <a href="https://wa.me/55SEUNUMERO12" class="btn">
+        <a href="https://wa.me/559292859765" class="btn">
             <img src="/img/sesmt_2.png" class="btn-icon"> Brenda Soares - Sesmt
         </a>
     </div>
