logo da dunloc|

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div class="button-container">
     <div class="column">
         <a href="https://wa.me/559292070394" class="btn">
-            <img src="/img/rafaela.png" class="btn-icon"> Rafaela Pinheir - Coordenadora
+            <img src="/img/rafaela.png" class="btn-icon"> Rafaela Pinheiro - Coordenadora
         </a>
         <a href="https://wa.me/559293274470" class="btn">
-            <img src="/img/beatriz.jpg" class="btn-icon"> Beatriz Farias - Cultura e Endomarketing
+            <img src="/img/beatriz.jpg" class="btn-icon"> Beatriz Farias - Endomarketing
         </a>
         <a href="https://wa.me/559293126789" class="btn">
             <img src="/img/maisa.jpg" class="btn-icon"> Maisa Brandão - Atração e Seleção
@@ -27,7 +27,7 @@
             <img src="/img/nattasha.png" class="btn-icon"> Nattasha Dias - Recrutamento e Seleção
         </a>
         <a href="https://wa.me/559282370180" class="btn">
-            <img src="/img/paula.jpg" class="btn-icon"> Paula Carvalho - Recrutamento e Seleção
+            <img src="/img/paula.jpg" class="btn-icon">Paula Carvalho - Recrutamento e Seleção
         </a>
         <a href="https://wa.me/559291826959" class="btn">
             <img src="/img/Rossiflavia.jpg" class="btn-icon"> Rossiflavia Souza - Atração e Seleção
@@ -66,6 +66,7 @@
         <footer>
             <img src="/img/logos-distribuidoras-3l.png" alt="Logo Empresas" class="footer-logo">
             <img src="/img/GM-PNG.png" alt="Grupo Medeiros" class="footer-logo">
+            <img src="/img/LOGO---DUNLOC.png" alt="Logo Dunloc" class="footer-logo-dunloc">
         </footer>
     </div>
 </body>
