--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <div class="button-container">
     <div class="column">
+        <h4> Recrutamento & Seleção</h4>
         <a href="https://wa.me/559292070394" class="btn">
             <img src="/img/rafaela.png" class="btn-icon"> Rafaela Pinheiro - Coordenadora
         </a>
@@ -38,6 +39,7 @@
     </div>
 
     <div class="column">
+        <h4>Departamento Pessoal & Gestão de Pessoas </h4>
         <a href="https://wa.me/559299972048" class="btn">
             <img src="/img/ana.png" class="btn-icon"> Ana Cavalcante - Coordenadora
         </a>
@@ -65,8 +67,8 @@
 
         <footer>
             <img src="/img/logos-distribuidoras-3l.png" alt="Logo Empresas" class="footer-logo">
-            <img src="/img/GM-PNG.png" alt="Grupo Medeiros" class="footer-logo">
             <img src="/img/LOGO---DUNLOC.png" alt="Logo Dunloc" class="footer-logo-dunloc">
+            <img src="/img/GM-PNG.png" alt="Grupo Medeiros" class="footer-logo">
         </footer>
     </div>
 </body>
