--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="column">
-        <h4>Departamento Pessoal & Gestão de Pessoas </h4>
+        <h4>Departamento Pessoal</h4>
         <a href="https://wa.me/559299972048" class="btn">
             <img src="/img/ana.png" class="btn-icon"> Ana Cavalcante - Coordenadora
         </a>
