--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img src="/img/beatriz.jpg" class="btn-icon"> Beatriz Farias - Endomarketing
         </a>
         <a href="https://wa.me/559293126789" class="btn">
-            <img src="/img/maisa.jpg" class="btn-icon"> Maisa Brandão - Atração e Seleção
+            <img src="/img/maisa.jpg" class="btn-icon"> Maisa Brandão - Recrutamento e Seleção
         </a>
         <a href="https://wa.me/559291366332" class="btn">
             <img src="/img/nattasha.png" class="btn-icon"> Nattasha Dias - Recrutamento e Seleção
@@ -31,10 +31,10 @@
             <img src="/img/paula.jpg" class="btn-icon">Paula Carvalho - Recrutamento e Seleção
         </a>
         <a href="https://wa.me/559291826959" class="btn">
-            <img src="/img/Rossiflavia.jpg" class="btn-icon"> Rossiflavia Souza - Atração e Seleção
+            <img src="/img/Rossiflavia.jpg" class="btn-icon"> Rossiflavia Souza - Recrutamento e Seleção
         </a>
         <a href="https://wa.me/559294862252" class="btn">
-            <img src="/img/Juliane.jpg" class="btn-icon"> Juliane Albuquerque - Recrutamento e Seleção
+            <img src="/img/Juliane.jpg" class="btn-icon"> Juliane Albuquerque - Treinamento
         </a>
     </div>
 
@@ -56,10 +56,10 @@
             <img src="/img/dp.png" class="btn-icon"> Italo Sousa - Jurídico
         </a>
         <a href="https://wa.me/559288019561" class="btn">
-            <img src="/img/sesmt_2.png" class="btn-icon"> Brenda Salanova - Sesmt
+            <img src="/img/brenda.jpeg" class="btn-icon"> Brenda Salanova - Sesmt
         </a>
         <a href="https://wa.me/559292859765" class="btn">
-            <img src="/img/sesmt_2.png" class="btn-icon"> Brenda Soares - Sesmt
+            <img src="/img/sesmt_2.png" class="btn-icon"> Brenda Soares - Tec. Segurança do Trabalho
         </a>
     </div>
 </div>
