Atualização RH  Beatriz

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="button-container">
     <div class="column">
-        <h4> Recrutamento & Seleção</h4>
+        <h4>Talentos e Cultura</h4>
         <a href="https://wa.me/559292070394" class="btn">
             <img src="/img/rafaela.png" class="btn-icon"> Rafaela Pinheiro - Coordenadora
         </a>
@@ -39,7 +39,7 @@
     </div>
 
     <div class="column">
-        <h4>Departamento Pessoal</h4>
+        <h4>Gestão de Pessoas</h4>
         <a href="https://wa.me/559299972048" class="btn">
             <img src="/img/ana.png" class="btn-icon"> Ana Cavalcante - Coordenadora
         </a>
