Atualização Rafaela (Isa, ju e Bea)

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <img src="/img/Rossiflavia.jpg" class="btn-icon"> Rossiflavia Souza - Recrutamento e Seleção
         </a>
         <a href="https://wa.me/559293274470" class="btn">
-            <img src="/img/beatriz.jpg" class="btn-icon"> Beatriz Farias - Endomarketing
+            <img src="/img/beatriz.jpg" class="btn-icon"> Beatriz Farias - Comunicação e Endomarketing
         </a>
         <a href="https://wa.me/559294862252" class="btn">
-            <img src="/img/Juliane.jpg" class="btn-icon"> Juliane Albuquerque - Treinamento
+            <img src="/img/Juliane.jpg" class="btn-icon"> Juliane Albuquerque - Treinamento e Desenvolvimento
         </a>
     </div>
 
@@ -44,7 +44,7 @@
             <img src="/img/ana.png" class="btn-icon"> Ana Cavalcante - Coordenadora
         </a>
         <a href="https://wa.me/559291466800" class="btn">
-            <img src="/img/dp.png" class="btn-icon"> Isadora Oliveira - Ponto
+            <img src="/img/dp.png" class="btn-icon"> Isadora Oliveira - Admissão/ Ponto/ Benefícios
         </a>
         <a href="https://wa.me/559291117312" class="btn">
             <img src="/img/dp.png" class="btn-icon"> Daniel Nascimento - Folha/RCA
