--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
 
 
         <footer>
-            <img src="/img/logos-distribuidoras-3l.png" alt="Logo Empresas" class="footer-logo">
-            <img src="/img/LOGO---DUNLOC.png" alt="Logo Dunloc" class="footer-logo-dunloc">
-            <img src="/img/GM-PNG.png" alt="Grupo Medeiros" class="footer-logo">
+            <img src="/img/LOGOS---GRUPO-MEDEIROS (1).png" alt="Logo Empresas" class="footer-logo">
         </footer>
     </div>
 </body>
